# holdtrue

./: .gitignore  Dockerfile.sandbox  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/abs/contract/: manifest.yaml
examples/abs/contract_private/: reference_impl.py
examples/abs/intent/: intent.md
examples/billing/contract/: manifest.yaml  models.py
examples/billing/contract_private/: reference_impl.py
examples/billing/controls/: buggy.py  correct.py
examples/billing/intent/: intent.md
examples/checkout/contract/: manifest.yaml  models.py
examples/checkout/controls/: buggy.py  correct.py
examples/checkout/intent/: intent.md
examples/chess/contract/: manifest.yaml
examples/chess/contract_private/: reference_impl.py
examples/chess/controls/: buggy.py  correct.py
examples/chess/intent/: intent.md
examples/clamp/contract/: manifest.yaml  manifest_weak.yaml
examples/clamp/contract_private/: reference_impl.py
examples/clamp/controls/: buggy.py  correct.py  correct_terse.py  weak_return_lo.py
examples/clamp/intent/: decisions.md  intent.md  questions.md
examples/clock/contract/: manifest.yaml
examples/clock/contract_private/: reference_impl.py
examples/clock/controls/: buggy.py  correct.py
examples/clock/intent/: intent.md
examples/counter/contract/: manifest.yaml
examples/counter/contract_private/: reference_impl.py
examples/counter/controls/: buggy.py  correct.py
examples/counter/intent/: intent.md
examples/dnd/contract/: manifest.yaml
examples/dnd/contract_private/: reference_impl.py
examples/dnd/controls/: buggy.py  correct.py
examples/dnd/intent/: intent.md
examples/nights/contract/: manifest.yaml  models.py
examples/scheduler/: conftest.py
src/holdtrue/: __init__.py  agents.py  changelog.py  classify.py  cli.py  crosscheck.py  engine.py  providers.py  report.py  revise.py  sandbox.py  seccomp.py  studio.py  tui.py  verify.py
tests/: test_classify.py  test_complex.py  test_crosscheck.py  test_languages.py  test_loop.py  test_multi.py  test_providers.py  test_pydantic.py  test_revise.py  test_tui.py
(+79 files in other folders)
