[project]
name = "holdtrue"
version = "0.1.0"
description = "Review the guarantee, not the code. A contract-first verification harness."
readme = "README.md"
authors = [
    { name = "Holdtrue", email = "holdtrue-dev@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "cosmic-ray>=8.4.6",
    "crosshair-tool>=0.0.107",
    "deal>=4.24.6",
    "hypothesis>=6.155.7",
    "jsonschema>=4.26.0",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "textual>=8.2.7",
]

[project.scripts]
holdtrue = "holdtrue.cli:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
