[project]
name = "holdtrue"
version = "0.1.0"
description = "Review the guarantee, not the code. A contract-first verification harness."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "holdtrue", email = "holdtrue-dev@proton.me" }
]
keywords = [
    "verification", "formal-verification", "design-by-contract", "contracts",
    "symbolic-execution", "property-based-testing", "mutation-testing",
    "llm", "ai", "code-generation", "sandbox",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "cosmic-ray>=8.4.6",
    "crosshair-tool>=0.0.107",
    "deal>=4.24.6",
    "hypothesis>=6.155.7",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "textual>=8.2.7",
]

[project.urls]
Homepage = "https://holdtrue-dev.github.io"
Repository = "https://github.com/holdtrue-dev/holdtrue"

[project.scripts]
holdtrue = "holdtrue.cli:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
